# hetzner

./: .gitignore  .prettierignore  .tmp_gameinfo.json  AUTO_DEPLOY.md  BOOTSTRAP-USAGE.md  CONTRIBUTING.md  DEPLOYMENT-FIXES-APPLIED.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-MIGRATION-GUIDE.md  Dockerfile  ENTERPRISE-SETUP-GUIDE.md  ENV-VARIABLES-PRODUCTION.md  ENVIRONMENT-VARIABLES.md  GITHUB_SETUP.md  IMAGE-UPDATE-GUIDE.md  PRODUCTION-OPTIMIZATIONS-SUMMARY.md  README-DEPLOYMENT.md  README.md  SECURITY-HARDENING.md  TEST-SERVER-SETUP.md  ULTIMATE-DEPLOYMENT-GUIDE.md  UNIFIED-DEPLOYMENT-GUIDE.md  WINDOWS-LINUX-COMPATIBILITY.md  admin  admin.pub  biome.json  build-and-deploy.sh  cache-handler.cjs  check-ao-items.js  check-kills.js  cleanup-deployment.sh  cspell.config.js  debug-market-names.js  deploy-albion-enterprise-2025.sh  deploy-albion-enterprise.sh  deploy-albion-unified.sh  deploy-k3s-worldclass-2025.sh  deploy-vps3-ultimate-nextjs-2025.sh  deploy-worldclass-hybrid-2025.sh  eslint-docs.html  (+23 more)
Docs/: API-DOCS.md  API_FIXES_SUMMARY.md  API_USAGE.md  DEPLOYMENT-GUIDE.md  INFRA-BOOTSTRAP.md  INFRA-K3S-BOOTSTRAP.md  INFRA-K3S.md  PVP_LOCALIZED_NAMES.md  ROADMAP.md  TYPESCRIPT_ERRORS_REMAINING.md  VSCODE_SETUP.md  WIREFRAMES.md  api_info.html  rules.md
data/: insert_kill_events.sql  insert_kill_events_small.sql
data-ingestion/: Dockerfile  package.json  sync-all-apis.js
prisma/: schema.prisma
public/: manifest.json
rust-wasm/: Cargo.toml  build.sh
rust-wasm/src/: lib.rs
scripts/: aggregate-meta-builds.ts  check-ao-items.ts  check-market-prices.ts  lighthouse-ci.mjs  (+12 more)
(+357 files in other folders)
