[package]
name = "albion-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
rayon = "1.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
